--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -44,6 +44,12 @@
 
         </androidx.appcompat.widget.AppCompatButton>
 
+
+      <FrameLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/frameLayout"/>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint_layout_2"
             android:layout_width="408dp"
