--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -7,209 +7,224 @@
     android:id="@+id/drawerLayoutRider"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.motion.widget.MotionLayout
-        android:id="@+id/constraintLayout3"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutDescription="@xml/activity_maps_xml_constraintlayout3_scene">
-
-        <fragment
-            android:id="@+id/riderMap"
-            class="com.google.android.gms.maps.SupportMapFragment"
+        >
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:layout_marginTop="4dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:context=".MapsActivity" />
+            android:layout_height="match_parent"
+            android:id="@+id/frameLayout"
+            >
+            <androidx.constraintlayout.motion.widget.MotionLayout
+                android:id="@+id/constraintLayout3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layoutDescription="@xml/activity_maps_xml_constraintlayout3_scene">
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/gpsRider"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/input_bg"
-            android:drawableStart="@drawable/ic_baseline_gps_fixed_24"
-            android:paddingStart="8dp"
-            android:scaleType="centerCrop"
-            android:textCursorDrawable="@drawable/gps"
-            app:layout_constraintBottom_toBottomOf="@+id/riderMap"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.956"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/riderMap"
-            app:layout_constraintVertical_bias="0.928">
+                <fragment
+                    android:id="@+id/riderMap"
+                    class="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:layout_marginTop="4dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:context=".MapsActivity" />
 
-        </androidx.appcompat.widget.AppCompatButton>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/gpsRider"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/input_bg"
+                    android:drawableStart="@drawable/ic_baseline_gps_fixed_24"
+                    android:paddingStart="8dp"
+                    android:scaleType="centerCrop"
+                    android:textCursorDrawable="@drawable/gps"
+                    app:layout_constraintBottom_toBottomOf="@+id/riderMap"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.956"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/riderMap"
+                    app:layout_constraintVertical_bias="0.928">
 
-
-      <FrameLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@+id/frameLayout"/>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraint_layout_2"
-            android:layout_width="408dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/riderMap"
-            app:layout_constraintVertical_bias="0.0">
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="57dp"
-                android:layout_height="6dp"
-                android:layout_gravity="center|top"
-                android:layout_marginBottom="8dp"
-                android:src="@drawable/bar"
-                app:layout_constraintBottom_toTopOf="@+id/textView7"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-            </ImageView>
-
-            <EditText
-                android:id="@+id/searchMap"
-                android:layout_width="287dp"
-                android:layout_height="45dp"
-                android:layout_marginStart="9dp"
-                android:fontFamily="@font/poppin"
-                app:layout_constraintStart_toEndOf="@+id/imageView8"
-                app:layout_constraintTop_toBottomOf="@+id/textView8">
-
-            </EditText>
-
-            <ImageView
-                android:id="@+id/markerSearch"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginTop="124dp"
-                android:src="@drawable/marker_icon"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.529"
-                app:layout_constraintStart_toEndOf="@+id/searchMap"
-                app:layout_constraintTop_toTopOf="parent">
-
-            </ImageView>
-
-            <ImageView
-                android:id="@+id/imageView8"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="16dp"
-                android:src="@drawable/marker_red"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView6">
-
-            </ImageView>
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="26dp"
-                android:layout_marginBottom="12dp"
-                android:fontFamily="@font/poppin"
-                android:text="PickUp"
-                android:textSize="15dp"
-                app:layout_constraintBottom_toTopOf="@+id/pickUpPoint"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.151"
-                app:layout_constraintStart_toStartOf="parent">
-            </TextView>
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
-                android:layout_height="26dp"
-                android:layout_marginStart="24dp"
-
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/poppin"
-                android:text="Drop Off"
-                app:layout_constraintStart_toEndOf="@+id/imageView6"
-                app:layout_constraintTop_toBottomOf="@+id/imageView7">
-
-            </TextView>
-
-            <TextView
-                android:id="@+id/pickUpPoint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="56dp"
-                android:fontFamily="@font/poppin"
-                android:text="My Current Location"
-                android:textColor="@color/black"
-                android:textSize="15dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/imageView5"
-                app:layout_constraintTop_toTopOf="parent">
-
-            </TextView>
-
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
-                android:src="@drawable/green_light"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView7">
-
-            </ImageView>
-
-            <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="3dp"
-                android:layout_height="53dp"
-                android:layout_marginStart="28dp"
-                android:src="@drawable/dotted_line"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView5">
-
-            </ImageView>
-
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="309dp"
-                android:layout_height="3dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/seperate_line"
-                app:layout_constraintStart_toEndOf="@+id/imageView6"
-                app:layout_constraintTop_toBottomOf="@+id/pickUpPoint">
-
-            </ImageView>
+                </androidx.appcompat.widget.AppCompatButton>
 
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                android:id="@+id/searchDrivers"
-                android:background="@drawable/roundedcorners"
-                android:text="Search For Drivers"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/searchMap"
-                app:layout_constraintVertical_bias="1.0">
-
-            </androidx.appcompat.widget.AppCompatButton>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </androidx.constraintlayout.motion.widget.MotionLayout>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraint_layout_2"
+                    android:layout_width="408dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/riderMap"
+                    app:layout_constraintVertical_bias="0.0">
+
+
+
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="57dp"
+                        android:layout_height="6dp"
+                        android:layout_gravity="center|top"
+                        android:layout_marginBottom="8dp"
+                        android:src="@drawable/bar"
+                        app:layout_constraintBottom_toTopOf="@+id/textView7"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent">
+
+                    </ImageView>
+
+                    <EditText
+                        android:id="@+id/searchMap"
+                        android:layout_width="287dp"
+                        android:layout_height="45dp"
+                        android:layout_marginStart="9dp"
+                        android:fontFamily="@font/poppin"
+                        app:layout_constraintStart_toEndOf="@+id/imageView8"
+                        app:layout_constraintTop_toBottomOf="@+id/textView8">
+
+                    </EditText>
+
+                    <ImageView
+                        android:id="@+id/markerSearch"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="124dp"
+                        android:src="@drawable/marker_icon"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.529"
+                        app:layout_constraintStart_toEndOf="@+id/searchMap"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                    </ImageView>
+
+                    <ImageView
+                        android:id="@+id/imageView8"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginStart="16dp"
+                        android:src="@drawable/marker_red"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/imageView6">
+
+                    </ImageView>
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="26dp"
+                        android:layout_marginBottom="12dp"
+                        android:fontFamily="@font/poppin"
+                        android:text="PickUp"
+                        android:textSize="15dp"
+                        app:layout_constraintBottom_toTopOf="@+id/pickUpPoint"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.151"
+                        app:layout_constraintStart_toStartOf="parent">
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="wrap_content"
+                        android:layout_height="26dp"
+                        android:layout_marginStart="24dp"
+
+                        android:layout_marginTop="8dp"
+                        android:fontFamily="@font/poppin"
+                        android:text="Drop Off"
+                        app:layout_constraintStart_toEndOf="@+id/imageView6"
+                        app:layout_constraintTop_toBottomOf="@+id/imageView7">
+
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/pickUpPoint"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="56dp"
+                        android:fontFamily="@font/poppin"
+                        android:text="My Current Location"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toEndOf="@+id/imageView5"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                    </TextView>
+
+                    <ImageView
+                        android:id="@+id/imageView5"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="12dp"
+                        android:src="@drawable/green_light"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView7">
+
+                    </ImageView>
+
+                    <ImageView
+                        android:id="@+id/imageView6"
+                        android:layout_width="3dp"
+                        android:layout_height="53dp"
+                        android:layout_marginStart="28dp"
+                        android:src="@drawable/dotted_line"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/imageView5">
+
+                    </ImageView>
+
+                    <ImageView
+                        android:id="@+id/imageView7"
+                        android:layout_width="309dp"
+                        android:layout_height="3dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:src="@drawable/seperate_line"
+                        app:layout_constraintStart_toEndOf="@+id/imageView6"
+                        app:layout_constraintTop_toBottomOf="@+id/pickUpPoint">
+
+                    </ImageView>
+
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/searchDrivers"
+                        android:layout_width="200dp"
+                        android:layout_height="50dp"
+                        android:background="@drawable/roundedcorners"
+                        android:text="Search For Drivers"
+                        android:visibility="visible"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.485"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/searchMap"
+                        app:layout_constraintVertical_bias="0.513">
+
+                    </androidx.appcompat.widget.AppCompatButton>
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </androidx.constraintlayout.motion.widget.MotionLayout>
+
+
+
+        </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 
