--- a/app/src/main/res/layout/fragment_personal_info.xml
+++ b/app/src/main/res/layout/fragment_personal_info.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.features.riderFeatures.tripsHistoryFragment.TripsHistoryFragment">
+    tools:context=".app.features.riderFeatures.personalInfo.PersonalInfoFragment">
 
     <TextView
         android:layout_width="211dp"
         android:layout_height="206dp"
         android:gravity="center"
-        android:text="Trips Fragment"
+        android:text="aoisdaiopsnainosdadop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
