--- a/app/src/main/res/xml/activity_maps_xml_constraintlayout3_scene.xml
+++ b/app/src/main/res/xml/activity_maps_xml_constraintlayout3_scene.xml
@@ -46,14 +46,15 @@
         <Constraint
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="412dp"
-            android:layout_height="149dp"
+            android:layout_height="292dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintVertical_bias="1.0"
             motion:layout_constraintTop_toBottomOf="@+id/riderMap"
             motion:layout_constraintStart_toStartOf="parent"
             android:id="@+id/constraint_layout_2"
             android:layout_marginTop="2dp"
-            motion:layout_editor_absoluteY="582dp" />
+            motion:layout_editor_absoluteY="480dp"
+            motion:layout_editor_absoluteX="2dp" />
         <Constraint
             motion:layout_editor_absoluteY="195dp"
             motion:layout_constraintStart_toStartOf="parent"
