--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -16,6 +16,7 @@
             android:layout_height="match_parent"
             android:id="@+id/frameLayout"
             >
+
             <androidx.constraintlayout.motion.widget.MotionLayout
                 android:id="@+id/constraintLayout3"
                 android:layout_width="match_parent"
@@ -54,8 +55,6 @@
                 </androidx.appcompat.widget.AppCompatButton>
 
 
-
-
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraint_layout_2"
                     android:layout_width="408dp"
@@ -67,16 +66,125 @@
                     app:layout_constraintTop_toBottomOf="@+id/riderMap"
                     app:layout_constraintVertical_bias="0.0">
 
+                    <ImageView
+                        android:id="@+id/carImage"
+                        android:layout_width="65dp"
+                        android:layout_height="45dp"
+                        android:layout_marginStart="36dp"
+                        android:layout_marginTop="164dp"
+                        android:src="@drawable/car_rider"
+                        android:visibility="invisible"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
 
+                    </ImageView>
+
+
+                    <TextView
+                        android:id="@+id/DistanceTextView"
+                        android:layout_width="70dp"
+                        android:layout_height="16dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="88dp"
+                        android:fontFamily="@font/poppin_bold"
+                        android:text="Distance"
+                        android:visibility="invisible"
+                        app:layout_constraintStart_toEndOf="@+id/carImage"
+                        app:layout_constraintTop_toBottomOf="@+id/pickUpPoint">
+
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/timeTextView"
+                        android:layout_width="62dp"
+                        android:layout_height="16dp"
+                        android:layout_marginStart="116dp"
+                        android:layout_marginTop="88dp"
+                        android:fontFamily="@font/poppin_bold"
+                        android:text="Time"
+                        android:visibility="invisible"
+                        app:layout_constraintStart_toEndOf="@+id/carImage"
+                        app:layout_constraintTop_toBottomOf="@+id/pickUpPoint">
+
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/priceTextview"
+                        android:layout_width="62dp"
+                        android:layout_height="16dp"
+                        android:layout_marginStart="196dp"
+                        android:layout_marginTop="88dp"
+                        android:fontFamily="@font/poppin_bold"
+                        android:text="Price"
+                        android:visibility="invisible"
+                        app:layout_constraintStart_toEndOf="@+id/carImage"
+                        app:layout_constraintTop_toBottomOf="@+id/pickUpPoint">
+
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/tripDistance"
+                        android:layout_width="55dp"
+                        android:layout_height="22dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="12dp"
+                        android:fontFamily="@font/poppin"
+                        android:text="0.2 Km"
+                        android:visibility="invisible"
+                        app:layout_constraintStart_toEndOf="@+id/carImage"
+                        app:layout_constraintTop_toBottomOf="@+id/DistanceTextView">
+
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/tripTime"
+                        android:layout_width="55dp"
+                        android:layout_height="22dp"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginTop="12dp"
+                        android:fontFamily="@font/poppin"
+                        android:text="55 m"
+                        android:visibility="invisible"
+                        app:layout_constraintStart_toEndOf="@+id/tripDistance"
+                        app:layout_constraintTop_toBottomOf="@+id/timeTextView">
+
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/tripPrice"
+                        android:layout_width="55dp"
+                        android:layout_height="22dp"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginTop="12dp"
+                        android:fontFamily="@font/poppin"
+                        android:text="$ 25"
+                        android:visibility="invisible"
+                        app:layout_constraintStart_toEndOf="@+id/tripTime"
+                        app:layout_constraintTop_toBottomOf="@+id/priceTextview">
+
+                    </TextView>
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/driverImageRider"
+                        android:layout_width="82dp"
+                        android:layout_height="64dp"
+                        android:layout_marginStart="28dp"
+                        android:layout_marginTop="12dp"
+                        android:src="@drawable/img"
+                        android:visibility="invisible"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/carImage">
+
+                    </de.hdodenhof.circleimageview.CircleImageView>
 
                     <ImageView
-                        android:id="@+id/imageView4"
+                        android:id="@+id/sildeBar"
                         android:layout_width="57dp"
                         android:layout_height="6dp"
                         android:layout_gravity="center|top"
                         android:layout_marginBottom="8dp"
                         android:src="@drawable/bar"
-                        app:layout_constraintBottom_toTopOf="@+id/textView7"
+                        app:layout_constraintBottom_toTopOf="@+id/pickupTextView"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent">
 
@@ -88,10 +196,22 @@
                         android:layout_height="45dp"
                         android:layout_marginStart="9dp"
                         android:fontFamily="@font/poppin"
-                        app:layout_constraintStart_toEndOf="@+id/imageView8"
-                        app:layout_constraintTop_toBottomOf="@+id/textView8">
+                        app:layout_constraintStart_toEndOf="@+id/markerImage"
+                        app:layout_constraintTop_toBottomOf="@+id/dropOffTextView">
 
                     </EditText>
+
+                    <ProgressBar
+                        android:id="@+id/progressBar2"
+                        android:layout_width="100dp"
+                        android:layout_height="94dp"
+                        android:layout_marginTop="80dp"
+                        android:visibility="invisible"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                    </ProgressBar>
 
                     <ImageView
                         android:id="@+id/markerSearch"
@@ -107,18 +227,18 @@
                     </ImageView>
 
                     <ImageView
-                        android:id="@+id/imageView8"
+                        android:id="@+id/markerImage"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_marginStart="16dp"
                         android:src="@drawable/marker_red"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/imageView6">
+                        app:layout_constraintTop_toBottomOf="@+id/lineVertical">
 
                     </ImageView>
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/pickupTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="26dp"
                         android:layout_marginBottom="12dp"
@@ -128,20 +248,19 @@
                         app:layout_constraintBottom_toTopOf="@+id/pickUpPoint"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.151"
-                        app:layout_constraintStart_toStartOf="parent">
-                    </TextView>
+                        app:layout_constraintStart_toStartOf="parent"></TextView>
 
                     <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/dropOffTextView"
+                        android:layout_width="61dp"
                         android:layout_height="26dp"
                         android:layout_marginStart="24dp"
 
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/poppin"
                         android:text="Drop Off"
-                        app:layout_constraintStart_toEndOf="@+id/imageView6"
-                        app:layout_constraintTop_toBottomOf="@+id/imageView7">
+                        app:layout_constraintStart_toEndOf="@+id/lineVertical"
+                        app:layout_constraintTop_toBottomOf="@+id/lineHorizontal">
 
                     </TextView>
 
@@ -157,42 +276,56 @@
                         android:textSize="15dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toEndOf="@+id/imageView5"
+                        app:layout_constraintStart_toEndOf="@+id/greenMarker"
                         app:layout_constraintTop_toTopOf="parent">
 
                     </TextView>
 
                     <ImageView
-                        android:id="@+id/imageView5"
+                        android:id="@+id/greenMarker"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="12dp"
                         android:src="@drawable/green_light"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView7">
+                        app:layout_constraintTop_toBottomOf="@+id/pickupTextView">
 
                     </ImageView>
 
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:layout_width="250dp"
+                        android:layout_height="45dp"
+                        android:id="@+id/cancelTrip"
+                        android:layout_marginTop="212dp"
+                        android:background="@drawable/rounded_grey"
+                        android:fontFamily="@font/poppin_bold"
+                        android:text="Cancel Trip"
+                        android:textColor="@color/white"
+                        android:visibility="invisible"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
                     <ImageView
-                        android:id="@+id/imageView6"
+                        android:id="@+id/lineVertical"
                         android:layout_width="3dp"
                         android:layout_height="53dp"
                         android:layout_marginStart="28dp"
                         android:src="@drawable/dotted_line"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/imageView5">
+                        app:layout_constraintTop_toBottomOf="@+id/greenMarker">
 
                     </ImageView>
 
                     <ImageView
-                        android:id="@+id/imageView7"
+                        android:id="@+id/lineHorizontal"
                         android:layout_width="309dp"
                         android:layout_height="3dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:src="@drawable/seperate_line"
-                        app:layout_constraintStart_toEndOf="@+id/imageView6"
+                        app:layout_constraintStart_toEndOf="@+id/lineVertical"
                         app:layout_constraintTop_toBottomOf="@+id/pickUpPoint">
 
                     </ImageView>
@@ -200,10 +333,12 @@
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/searchDrivers"
-                        android:layout_width="200dp"
+                        android:layout_width="250dp"
                         android:layout_height="50dp"
-                        android:background="@drawable/roundedcorners"
+                        android:background="@drawable/rounded_grey"
+                        android:fontFamily="@font/poppin_bold"
                         android:text="Search For Drivers"
+                        android:textColor="@color/white"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
